# AiMemo

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  config.json5  install-claude-vscode.ps1  rust_hello.rs
backend/: pyproject.toml
backend/app/: __init__.py  frontend.py  main.py
backend/app/agent/: __init__.py  checkpoints.py  embeddings.py  graph.py  model.py  nodes.py  project_rules.py  state.py  tools.py
backend/app/ai/: __init__.py  json_utils.py  note_metadata.py  prompts.py
backend/app/api/: app_config.py  attachments.py  background_tasks.py  chat.py  cloud_sync.py  commands.py  conversations.py  elf.py  elf_voice.py  jobs.py  knowledge.py  memories.py  note_categories.py  note_tags.py  notes.py  search.py  voice_profiles.py
backend/app/core/: config.py  database.py  timing.py
backend/app/jobs/: __init__.py  handlers.py  models.py  queue.py  (+3 more)
backend/tests/: conftest.py  test_agent_model.py  test_aliyun_oss_provider.py  test_app_config_api.py  test_app_routes.py  test_background_task_persistence.py  test_chat_attachments.py  test_chat_stream_service.py  test_chunking.py  test_cloud_storage_provider.py  test_cloud_sync_api.py  test_cloud_sync_service.py  test_command_background_and_policy.py  test_command_router.py  test_context_pyramid.py  test_context_pyramid_config.py  test_conversation_export.py  test_conversation_memory_graph.py  test_conversation_service.py  test_conversation_summary_graph.py  test_conversation_summary_jobs.py  test_conversation_title_graph.py  test_cors_config.py  test_dashscope_voice_provider.py  test_database_migration.py  test_elf_chat_service.py  test_elf_event_service.py  test_elf_voice_api.py  test_embeddings.py  test_full_cloud_sync_domains.py  test_job_queue.py  test_job_reconciler.py  test_job_service.py  test_job_worker.py  test_knowledge_api.py  test_knowledge_image_text_service.py  test_knowledge_ingest_graph.py  test_knowledge_parsers_and_chunking.py  test_knowledge_search_service.py  test_local_operator_graph.py  (+14 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
(+374 files in other folders)
