[project]
name = "ai-note-backend"
version = "0.1.0"
description = "Ai Ji backend service"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite==2.0.11",
  "sqlite-vec>=0.1.9",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "pypdf>=5.1.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
