[package]
name = "memo-elf-desktop"
version = "0.1.0"
description = "Memo Elf desktop proof of concept"
authors = ["AiMemo contributors"]
edition = "2021"

[lib]
name = "memo_elf_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
