[package]
name = "memo-elf-desktop"
version = "0.1.0"
description = "Memo Elf desktop proof of concept"
authors = ["AiMemo contributors"]
edition = "2021"
default-run = "memo-elf-desktop"

[lib]
name = "memo_elf_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memo-elf-native"
path = "src/native_elf.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0.149"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.4"

[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.18.2"
gdk-pixbuf = "0.18.5"
gtk = "0.18.2"
